update various page layouts

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -7,7 +7,7 @@
 	<div class="page-header">
 		<h1>{{ title }}</h1>
 	</div>
-	<p>{% trans %}The Lorry project was created from three basic concepts:{% endtrans %}</p>
+	<p class="lead">{% trans %}The Lorry project was created from three basic concepts:{% endtrans %}</p>
 	<div class="row">
 		<div class="col-md-4">
 			<h3>{% trans %}Fan page{% endtrans %}</h3>
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<hr>
-	<p>{% trans %}This project was only made possible with a number of technologies and free resources:{% endtrans %}</p>
+	<p class="lead">{% trans %}This project was only made possible with a number of technologies and free resources:{% endtrans %}</p>
 	<div class="row">
 		<div class="col-md-4">
 			<h3>{% trans "Technologies" %}</h3>
