--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -7,7 +7,7 @@
 	<div class="page-header">
 		<h1>{{ title }}</h1>
 	</div>
-	<p>{% trans %}Clonk is a unique 2.5-dimensional game and often referred to as a mix of "The Settlers" and "Lemmings": The core difference is the open addon format, transforming the game to anything you can imagine.{% endtrans %}</p>
+	<p class="lead">{% trans %}Clonk is a unique 2.5-dimensional game and often referred to as a mix of "The Settlers" and "Lemmings": The core difference is the open addon format, transforming the series to anything you can imagine.{% endtrans %}</p>
 	<div class="row">
 		<div class="col-md-4">
 			<h3>{% trans %}Clonk Rage{% endtrans %}</h3>
