rework header navigation for publishing

--- a/app/templates/publish/create.twig
+++ b/app/templates/publish/create.twig
@@ -1,6 +1,6 @@
 {% extends 'root.twig' %}
 
-{% set title = 'New addon'|trans %}
+{% set title = 'Publish new addon'|trans %}
 
 {% block content %}
 <div class="container">
