add text selection color

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -1,7 +1,17 @@
 @import 'bootstrap/variables.less';
 
 .navbar-brand {
+	
+}
 
+::selection {
+	color: white;
+	background-color: firebrick;
+}
+
+::-moz-selection {
+	color: white;
+	background-color: firebrick;
 }
 
 body {
