--- a/web/resources/lorry/css/lorry.css
+++ b/web/resources/lorry/css/lorry.css
@@ -1,3 +1,11 @@
+::selection {
+  color: white;
+  background-color: firebrick;
+}
+::-moz-selection {
+  color: white;
+  background-color: firebrick;
+}
 body {
   background-image: url('../img/debut_light.png');
   min-height: 100%;
