--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -20,8 +20,8 @@
 						<h4 class="media-heading">{{addon.title}}</h4>
 						{% include 'functions/tags/game.twig' with {'short' : addon.game.short, 'title' : addon.game.title}%}
 						<p>
-							<a href="{{filename}}/addons/{{addon.id}}" class="btn btn-sm btn-info">{% trans %}Edit addon{% endtrans %}</a>
-							<a href="{{filename}}/addons/{{addon.id}}#releases" class="btn btn-sm btn-default">{% trans %}Edit releases{% endtrans %}</a>
+							<a href="{{filename}}/{{addon.id}}" class="btn btn-sm btn-info">{% trans %}Edit addon{% endtrans %}</a>
+							<a href="{{filename}}/{{addon.id}}#releases" class="btn btn-sm btn-default">{% trans %}Edit releases{% endtrans %}</a>
 						</p>
 					</div>
 				</li>
