--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -5,7 +5,7 @@
 {% block content %}
 	<div class="container">
 		<div class="page-header">
-			<h1><a href="{{base}}/publish/addons/{{addonid}}#releases" class="text-muted">{{addontitle}}</a> <span class="text-muted"> / </span><small><span class="label label-primary">Version {{version}}</span></small></h1>
+			<h1><a href="{{base}}/publish/{{addonid}}#releases" class="text-muted">{{addontitle}}</a> <span class="text-muted"> / </span><small><span class="label label-primary">Version {{version}}</span></small></h1>
 		</div>
 		<ul class="nav nav-tabs" id="editAddonTabs">
 			<li class="active"><a href="#general" data-toggle="tab">{% trans "General" %}</a></li>
@@ -16,12 +16,12 @@
 		</ul>
 		<div class="tab-content">
 			<div class="tab-pane active" id="general">
-				{% include 'functions/alert.twig' with {'selector' : 'version'} %}			
+				{% include 'functions/alert.twig' with {'selector' : 'version'} %}
 				<form role=form" method="post" action="{{filename}}">
 					<input type="hidden" name="state" value="{{state}}">
 					<div class="form-group">
 						<label for="title">{%trans "Addon" %}</label>
-						<p class="form-control-static"><a href="{{base}}/publish/addons/{{addonid}}#releases">{{addontitle}}</a></p>
+						<p class="form-control-static"><a href="{{base}}/publish/{{addonid}}#releases">{{addontitle}}</a></p>
 					</div>
 					<div class="form-group">
 						<label for="version">{%trans "Version" %}</label>
