fix another outdated url

--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -31,7 +31,7 @@
 		{% if user_login %}
 		<p>
 			<a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a>
-			<a href="{{base}}/publish/create?for={{short}}" class="btn btn-default">{% trans %}New {{game}} addon{% endtrans %}</a>
+			<a href="{{base}}/create?for={{short}}" class="btn btn-default">{% trans %}New {{game}} addon{% endtrans %}</a>
 		</p>
 		{% endif %}
 {% endif %}
