resize identify button for password prompt

--- a/app/templates/account/identify.twig
+++ b/app/templates/account/identify.twig
@@ -20,7 +20,7 @@
 		</form>
 		{% else %}
 		<p>{% trans %}We would like to verify your identity independent of your login service in future. Please add a secure password to continue.{% endtrans %}</p>
-		<p><a href="{{base}}/settings?add-password#password" class="btn btn-primary">{% trans %}Settings{% endtrans %}</a></p>
+		<p><a href="{{base}}/settings?add-password#password" class="btn btn-lg btn-primary">{% trans %}Settings{% endtrans %}</a></p>
 		{% endif %}
 	</div>
 </div>
