--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -30,8 +30,7 @@
 		<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
 		{% if user_login %}
 		<p>
-			<a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a>
-			<a href="{{base}}/create?for={{short}}" class="btn btn-default">{% trans %}New {{game}} addon{% endtrans %}</a>
+			<a href="{{base}}/create?for={{short}}" class="btn btn-primary btn-lg">{% trans %}New {{game}} addon{% endtrans %}</a>
 		</p>
 		{% endif %}
 {% endif %}
