fix w3 validator conformity on a few pages

--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -65,7 +65,7 @@
 			<hr>
 			<h3>{% trans %}Why should I register?{% endtrans %}</h3>
 			<ul class="list-group">
-				<li class="list-group-item""><span class="glyphicon glyphicon-upload"></span> {% trans %}Publish your own addons{% endtrans %}</li>
+				<li class="list-group-item"><span class="glyphicon glyphicon-upload"></span> {% trans %}Publish your own addons{% endtrans %}</li>
 			</ul>
 			<h4>{% trans %}Upcoming features{% endtrans %}</h4>
 			<ul class="list-group">
