--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -25,7 +25,7 @@
 </div>
 <div class="jumbotron">
 	<div class="container">
-		<a href="#"><img src="{{resources}}/custom/game/{{short}}.png" class="pull-right jumbo-image hidden-xs"></a>
+		<a href="#"><img src="{{resources}}/custom/game/{{short}}.png" class="pull-right jumbo-image hidden-xs" alt="{{game}} logo"></a>
 		<h1>{% trans %}No addons available{% endtrans %}</h1>
 		<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
 		{% if user_login %}
