add InstantClick for top navigation

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -1,7 +1,7 @@
 @import 'bootstrap/variables.less';
 
 .navbar-brand {
-	
+
 }
 
 ::selection {
@@ -218,3 +218,9 @@ h1 a.btn {
 @-ms-viewport       { width: device-width; }
 @-o-viewport        { width: device-width; }
 @viewport           { width: device-width; }
+
+/* hide instantclick loading bar */
+
+#instantclick {
+	display: none;
+}
