--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -38,6 +38,8 @@
 		<script src="{{resources}}/jquery/jquery.are-you-sure.js"></script>
 		<script src="{{resources}}/bootstrap/js/bootstrap.min.js"></script>
 		<script src="{{resources}}/lorry/js/lorry.js"></script>
+		<script src="{{resources}}/instantclick/instantclick.min.js"></script>
+		<script>InstantClick.init(true);</script>
 		{% for script in scripts %}
 		<script src="{{resources}}{{script}}"></script>
 		{% endfor %}
