--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -57,6 +57,8 @@
 				<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/twbs/bootstrap/graphs/contributors">contributors</a>,</dd>
 				<dt><a href="http://resumablejs.com/">Resumable.js</a></dt>
 				<dd>by the company <a href="http://www.23company.com/">23</a>,</dd>
+				<dt><a href="http://instantclick.io/">InstantClick</a></dt>
+				<dd>by <a href="https://github.com/dieulot">Alexandre Dieulot</a>,</dd>
 				<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
 				<dd>with <a href="http://www.clonk.de/forum/en/topic_show.pl?pid=11760#pid11760">friendly permission</a> from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
 				<dt><a href="http://git.openclonk.org/openclonk-resources.git/blob/HEAD:/graphics/OpenClonkLogo.xcf">OpenClonk logo</a></dt>
