whitelist more links for instantclick

--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -63,7 +63,7 @@
 			<hr>
 			<h3>{% trans %}No account yet?{% endtrans %}</h3>
 			<p>{% trans %}Registering takes only a few moments and allows you to participate in the Clonk community.{% endtrans %}</p>
-			<p><a href="{{base}}/register{% if returnto %}?returnto={{returnto}}{% endif %}" class="btn btn-md btn-success">{% trans %}Register now{% endtrans %}</a></p>
+			<p><a href="{{base}}/register{% if returnto %}?returnto={{returnto}}{% endif %}" class="btn btn-md btn-success" data-instant>{% trans %}Register now{% endtrans %}</a></p>
 		</div>
 	</div>
 </div>
