--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -29,7 +29,7 @@
 		<div class="container">
 			<footer class="footer">
 				<p class="visible-xs hidden-print">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
-				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}} · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a></p>
+				<p data-instant><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}} · <a class="text" href="{{base}}/about">{% trans "About the project" %}</a> · <a class="text" href="{{base}}/contact">{% trans "Contact" %}</a></p>
 			</footer>
 		</div>
 	{% endblock %}
