--- a/app/templates/functions/navbar.twig
+++ b/app/templates/functions/navbar.twig
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{{base}}">{{brand}}</a>
+			<a class="navbar-brand" href="{{base}}" data-instant>{{brand}}</a>
 		</div>
 
 		<div class="collapse navbar-collapse main-navbar-collapse" data-instant>
