--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -20,7 +20,7 @@
 			<h3>{% trans %}Distribution platform{% endtrans %}</h3>
 			<p>{% trans %}We want to provide Clonk players with a simple, clean interface to find and download the best addons and keep them up-to-date as they progress.{% endtrans %}</p>
 			<p>{% trans %}It should also serve as an archive, to enable players to go back and find forgotten gems of the past.{% endtrans %}</p>
-			<p><a href="{{base}}" class="btn btn-info" data-instant>{% trans "Discover the addons" %}</a></p>
+			<p><a href="{{base}}/addons" class="btn btn-info" data-instant>{% trans "Discover the addons" %}</a></p>
 		</div>
 		<div class="col-md-4">
 			<hr class="visible-xs">
