--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -33,7 +33,7 @@
 			<h3>{% trans %}&hellip;only just the beginning{% endtrans %}</h3>
 			<p>{% trans %}Clonk lives from its fans, with dedicated players creating high-quality addons.{% endtrans %}</p>
 			<p>{% trans %}The series appeals to all ages alike and has been around for many years. Addons exist in a huge variety of gameplay and genre, and Lorry offers a central platform for the best of them.{% endtrans %}</p>
-			<a href="{{base}}" class="btn btn-success" data-instant>{% trans %}View the addons{% endtrans %}</a>
+			<a href="{{base}}/addons" class="btn btn-info" data-instant>{% trans %}View the addons{% endtrans %}</a>
 		</div>
 	</div>
 	<hr>
@@ -43,14 +43,14 @@
 			<p>{% trans %}The official development of Clonk Rage has halted, therefore the community is creating an open source succesor - OpenClonk.{% endtrans %}</p>
 			<p>{% trans %}Both games are different and alike, but the majority of all addons have been created for Clonk Rage. Once you've created something awesome you can distribute it via Lorry, making it instantly available for any interested player.{% endtrans %}</p>
 			<p>
-				<a href="{{base}}/publish" class="btn btn-info" data-instant>{% trans %}Visit the publishing portal{% endtrans %}</a>
+				<a href="{{base}}/create" class="btn btn-info" data-instant>{% trans %}Visit the publishing portal{% endtrans %}</a>
 			</p>
 		</div>
 		<div class="col-md-4">
 			<h2>{% trans %}Build the next Clonk{% endtrans %}</h2>
 			<p>{% trans %}The OpenClonk project is constantly looking for developers to help out with the next iteration of Clonk. If you have moderate or even advanced C++-skills you should definitively be welcome in the team.{% endtrans %}</p>
 			<p>
-				<a href="http://wiki.openclonk.org/w/Development" class="btn btn-info">{% trans %}Visit the OpenClonk wiki{% endtrans %}</a>
+				<a href="http://wiki.openclonk.org/w/Development" class="btn btn-default">{% trans %}Visit the OpenClonk wiki{% endtrans %}</a>
 			</p>
 		</div>
 	</div>
