--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -221,6 +221,6 @@ h1 a.btn {
 
 /* hide instantclick loading bar */
 
-#instantclick {
-	display: none;
+#instantclick-bar {
+	background: firebrick;
 }
